fixed wrong margins in comment list items

--- a/engines/wordpress/nucleus/scss/wordpress/_comments.scss
+++ b/engines/wordpress/nucleus/scss/wordpress/_comments.scss
@@ -15,7 +15,7 @@
 
         // Single Comment
         li.comment {
-            margin: 20px 0;
+            margin: 20px 0 0;
 
             .comment-author {
                 @include display(flex);
